<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BluePrints</string>
    <string name="action_settings">Settings</string>
    <string name="open">Open</string>
    <string name="save">Save</string>
    <string name="newBlue">New</string>
    <string name="create">Create</string>
    <string name="width">Width:</string>
    <string name="length">Length:</string>
    <string name="floors">Floors:</string>

</resources>